@@ -49,6 +49,7 @@ package org.netbeans.modules.php.editor.parser;
 import java.util.*;
 import org.netbeans.modules.php.editor.parser.astnodes.*;
 
+@org.netbeans.api.annotations.common.SuppressWarnings({"DM_NUMBER_CTOR", "EI_EXPOSE_REP", "MS_PKGPROTECT"})
 /** CUP v0.11a beta 20060608 generated parser.
   * @version Wed Sep 05 13:43:46 CEST 2012
   */
@@ -1268,12 +1269,12 @@ new EncodedActionTable5().getTableData()
 }
 
 
-	protected final static Integer PUBLIC = new Integer(BodyDeclaration.Modifier.PUBLIC);
-	protected final static Integer PRIVATE = new Integer(BodyDeclaration.Modifier.PRIVATE);
-	protected final static Integer PROTECTED = new Integer(BodyDeclaration.Modifier.PROTECTED);
-	protected final static Integer ABSTRACT = new Integer(BodyDeclaration.Modifier.ABSTRACT);
-	protected final static Integer FINAL = new Integer(BodyDeclaration.Modifier.FINAL);
-	protected final static Integer STATIC = new Integer(BodyDeclaration.Modifier.STATIC);
+	protected final static Integer PUBLIC = Integer.valueOf(BodyDeclaration.Modifier.PUBLIC);
+	protected final static Integer PRIVATE = Integer.valueOf(BodyDeclaration.Modifier.PRIVATE);
+	protected final static Integer PROTECTED = Integer.valueOf(BodyDeclaration.Modifier.PROTECTED);
+	protected final static Integer ABSTRACT = Integer.valueOf(BodyDeclaration.Modifier.ABSTRACT);
+	protected final static Integer FINAL = Integer.valueOf(BodyDeclaration.Modifier.FINAL);
+	protected final static Integer STATIC = Integer.valueOf(BodyDeclaration.Modifier.STATIC);
 
         private ErrorStrategy defaultStrategy = new DefaultErrorStrategy();;
         private ErrorStrategy errorStrategy = defaultStrategy;
@@ -3813,7 +3814,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
 
 	((LinkedList)elseifList[0]).addFirst(condition);
 	((LinkedList)elseifList[1]).addFirst(iftrue);
-	((LinkedList)elseifList[2]).addFirst(new Integer(tokenleft));
+	((LinkedList)elseifList[2]).addFirst(Integer.valueOf(tokenleft));
 
 	RESULT = elseifList;
 
@@ -3861,7 +3862,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
 	Block block = new Block(colonleft, statementListright, statementList, false);
 	((LinkedList)elseifList[0]).addFirst(condition);
 	((LinkedList)elseifList[1]).addFirst(block);
-	((LinkedList)elseifList[2]).addFirst(new Integer(tokenleft));
+	((LinkedList)elseifList[2]).addFirst(Integer.valueOf(tokenleft));
 
 	RESULT = elseifList;
 
@@ -4970,7 +4971,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
 		int modifierright = ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()).right;
 		Integer modifier = (Integer)((java_cup.runtime.Symbol) CUP$ASTPHP5Parser$stack.peek()).value;
 
-    RESULT = new Integer(modifier.intValue());
+    RESULT = modifier;
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("variable_modifiers",114, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -4984,7 +4985,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
 		int modifierright = ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()).right;
 		Integer modifier = (Integer)((java_cup.runtime.Symbol) CUP$ASTPHP5Parser$stack.peek()).value;
 
-    RESULT = new Integer(modifier.intValue());
+    RESULT = modifier;
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("variable_modifiers",114, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5004,7 +5005,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     int result = 0;
     result |= fModifier.intValue();
     result |= sModifier.intValue();
-    RESULT = new Integer(result);
+    RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("variable_modifiers",114, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5024,7 +5025,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     int result = 0;
     result |= fModifier.intValue();
     result |= sModifier.intValue();
-    RESULT = new Integer(result);
+    RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("variable_modifiers",114, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5060,7 +5061,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
 		int modifierright = ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()).right;
 		Integer modifier = (Integer)((java_cup.runtime.Symbol) CUP$ASTPHP5Parser$stack.peek()).value;
 
-    RESULT = new Integer(modifier.intValue());
+    RESULT = modifier;
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5074,7 +5075,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
 		int modifierright = ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()).right;
 		Integer modifier = (Integer)((java_cup.runtime.Symbol) CUP$ASTPHP5Parser$stack.peek()).value;
 
-    RESULT = new Integer(modifier.intValue());
+    RESULT = modifier;
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5088,7 +5089,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
 		int modifierright = ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()).right;
 		Integer modifier = (Integer)((java_cup.runtime.Symbol) CUP$ASTPHP5Parser$stack.peek()).value;
 
-    RESULT = new Integer(modifier.intValue());
+    RESULT = modifier;
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5108,7 +5109,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     int result = 0;
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5141,7 +5142,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     int result = 0;
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5161,7 +5162,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     int result = 0;
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5181,7 +5182,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     int result = 0;
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5201,7 +5202,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     int result = 0;
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5221,7 +5222,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     int result = 0;
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5245,7 +5246,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
     result |= tModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-2)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5269,7 +5270,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
     result |= tModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-2)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5293,7 +5294,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
     result |= tModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-2)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5317,7 +5318,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
     result |= tModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-2)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5341,7 +5342,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
     result |= tModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-2)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -5365,7 +5366,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
     result |= fModifier.intValue();
 	result |= sModifier.intValue();
     result |= tModifier.intValue();
-	RESULT = new Integer(result);
+	RESULT = Integer.valueOf(result);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("method_modifiers",96, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-2)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -9038,7 +9039,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
             {
               Integer RESULT =null;
 
-	RESULT = new Integer(1);
+	RESULT = Integer.valueOf(1);
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("simple_indirect_reference",64, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
@@ -9052,7 +9053,7 @@ switch (CUP$ASTPHP5Parser$act_num) {
 		int refright = ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)).right;
 		Integer ref = (Integer)((java_cup.runtime.Symbol) CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)).value;
 
-	RESULT = new Integer(1 + ref.intValue());
+	RESULT = Integer.valueOf(1 + ref.intValue());
 
               CUP$ASTPHP5Parser$result = parser.getSymbolFactory().newSymbol("simple_indirect_reference",64, ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.elementAt(CUP$ASTPHP5Parser$top-1)), ((java_cup.runtime.Symbol)CUP$ASTPHP5Parser$stack.peek()), RESULT);
             }
